# f1tenth_ws

./: README.md  requirements.txt
src/f1tenth_control/: package.xml  setup.py
src/f1tenth_control/config/: camera.yaml  joy_teleop.yaml  vesc.yaml
src/f1tenth_control/f1tenth_control/: mvp_fake_slam.py  pure_pursuit_control.py  vicon_bridge_node.py  vicon_tracker_pp_node.py  waypoint_recorder.py
src/f1tenth_control/launch/: control_launch.py  gym_bridge_launch.py  pure_pursuit.launch.py  sensors_launch.py  slam_mvp_launch.py  teleop.launch.py  visualization_launch.py
src/f1tenth_control/rviz/: f1tenth.rviz  gym_bridge.rviz
src/f1tenth_control/scripts/: plot_waypoints.py
src/f1tenth_control/waypoints/: xyhead_demo_pp.csv
src/f1tenth_system/f1tenth_stack/f1tenth_stack/: throttle_interpolator.py
src/motion_capture_tracking/: README.md
src/motion_capture_tracking/.github/workflows/: ROS.yml
src/motion_capture_tracking/motion_capture_tracking/: CHANGELOG.rst  CMakeLists.txt  KALMAN_FILTER_README.md  package.xml
src/motion_capture_tracking/motion_capture_tracking/config/: cfg.yaml  rviz.rviz
src/motion_capture_tracking/motion_capture_tracking/launch/: launch_2d_pose_publisher.py  launch_3d_pose_publisher.py
src/motion_capture_tracking/motion_capture_tracking/src/: 2d_pose_motion_capture_node.cpp  3d_pose_motion_capture_node.cpp  KalmanFilter.cpp  motion_capture_tracking_node.cpp
src/motion_capture_tracking/motion_capture_tracking_interfaces/: CHANGELOG.rst  package.xml
src/realsense-ros/: README.md
(+1 files in other folders)
